--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Homework #4</title>
   </head>
   <body>
-    <!-- <script src="./js/task-1.js"></script> -->
+    <script src="./js/task-1.js"></script>
     <script src="./js/task-2.js"></script>
     <script src="./js/task-3.js"></script>
   </body>
